# company_chatbot

./: README_AUTOMATED.md  main.py  pyproject.toml  requirements_fastapi.txt
agents/: __init__.py  data_analyst.py  google_researcher.py  relevanceai_researcher.py
data/: company_results.csv
tasks/: research_tasks.py
